put login link back in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,12 @@
           <input type="search" class="search" placeholder="Search for a product..."> 
         </div>
       </div>
+  
+
 
        
 <%= link_to '+', new_post_path, class: "add-new-post" %> 
+<a href="#" class="login">Log in</a>
 
       </div>
 
