--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <header class="main-header">
 
     <div class="top-header">
-
+ 
       <div class="content-wrap group">
 
         <div class="logo">
@@ -33,7 +33,14 @@
 
        
 <%= link_to '+', new_post_path, class: "add-new-post" %> 
-<a href="#" class="login">Log in</a>
+<!--- <a href="#" class="login">Log in</a> -->
+
+
+<% if user_signed_in? %>
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete, class: "login") %>
+<% else %>
+  <%= link_to('Login', new_user_session_path, class: "login") %>
+<% end %>
 
       </div>
 
@@ -64,7 +71,8 @@
                 <%= Time.new.strftime '%D' %> </h2>
         </header>
 
-  
+  <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
 <%= yield %>
   </div>
 </main>
