--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,11 @@
 
 </div>
 <div class="post-meta">
-            <span class="post-comments">99</span>
+            <span class="post-comments"><%= post.comments.count %></span>
+            <img src='http://www.wpclipart.com/signs_symbol/speech_bubbles/speech_solid/comment_bubble_solid_grey_right.svg'
+          <%= link_to post_comments_path(post) do %>
+            
+            <% end %>
 
             <div class="hoverbox">
             <img src="https://secure.gravatar.com/avatar/fd057f1d585d43bba970999c90eea118.png" alt="post-creator" class="post-creator">
@@ -28,5 +32,4 @@
 </div>
           
      <% end %>       
-
 
