--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,33 +1,28 @@
-<p id="notice"><%= notice %></p>
+<div>
+  <%= link_to("Home",posts_path)%>
+</div>
+<h1>All comments for "<%= @post.title %>"</h1>
 
-<h1>Listing Comments</h1>
+<div class="comments">
 
-<table>
-  <thead>
-    <tr>
-      <th>Post</th>
-      <th>User</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <% @comments.each do |comment| %>
 
-  <tbody>
-    <% @comments.each do |comment| %>
-      <tr>
-        <td><%= comment.user.email %></td>
-        <td><%= comment.created_at %></td>
-        <td><%= comment.content %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class="comment group">
+      <blockquote>
+        <%= comment.content %>
+      </blockquote>
+      <cite><%= comment.user.email %><time datetime="<%= comment.created_at %>">at <%= comment.created_at.strftime('%d/%m/%y %H:%I') %></time></cite>
 
-<br>
-<%= form_for(@comment) do |f| %>
+    </div>
+
+  <% end %>
+
+</div>
+
+<h2>Post a comment</h2>
+
+<%= form_for([@post, @comment]) do |f| %>
+
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -41,21 +36,12 @@
   <% end %>
 
   <div class="field">
-  
-    <%= f.label :post_id %><br>
-    <%= f.number_field :post_id %>
+    <%#= f.label :content %>
+    <%= f.text_area :content, rows: 5, placeholder: "Add your comment here" %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
-<% end %>
 
-<%#= link_to 'New Comment', new_comment_path %>
+<% end %>
