--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
 <div class='post group'>
   
 
-  <% button_to upvote_post_path(post), class:'upvote' do%>
+  <%= button_to upvote_post_path(post), class:'vote-wrap' do%>
       &#9650;
     <br>
   
